syntax = "proto3";

package axorith.contracts;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Axorith.Contracts";

// Service for streaming notifications from Host to Client.
service NotificationService {
  // Streams transient notifications (Toasts) generated by modules or the host.
  rpc StreamNotifications(StreamNotificationsRequest) returns (stream NotificationEvent);
}

message StreamNotificationsRequest {
  // Empty for now, reserved for future filtering options.
}

message NotificationEvent {
  string message = 1;
  NotificationType type = 2;
  google.protobuf.Timestamp timestamp = 3;

  // Optional source (e.g., "Spotify", "System")
  string source = 4;
}

enum NotificationType {
  INFO = 0;
  SUCCESS = 1;
  WARNING = 2;
  ERROR = 3;
}